Dashboard: fixed font size for html+body elements
Without this Chrome has too large a font to show all worker info on one
line.

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -1,5 +1,6 @@
 html, body {
     font-family: Noto, Ubuntu, sans-serif;
+    font-size: 14px;
     color: white;
     background-color: #496977;
     text-shadow: 0.2ex 0.2ex 0.1ex rgba(0, 0, 0, 0.2);
